--- a/orders.html
+++ b/orders.html
@@ -8,11 +8,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>    
 </head>
 <body>
+     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
+        <div class="container-fluid">
+            <a class="navbar-brand h4 fw-bold text-white" href="index.html">
+                <i class="bi bi-box-seam-fill"></i> Ai Brothers Pvt Ltd
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="orders.html">Add Orders</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container py-5">
         
         <div class="card text-bg-primary mb-3 shadow-lg mx-auto" style="max-width: 35rem;">
             <div class="card-header text-center">
-                <h4 class="mb-0"> Add Order Entry</h4>
+                <h4 class="mb-0"> Add Order</h4>
             </div>
             <div class="card-body bg-white text-dark rounded-bottom">
                 <form>
